--- a/RozarPagesMovie/appsettings.json
+++ b/RozarPagesMovie/appsettings.json
@@ -6,5 +6,8 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConnectionStrings": {
+    "RozarPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RozarPagesMovieContext-5e9c8306-5fab-4640-972e-fcf808914275;Trusted_Connection=True;MultipleActiveResultSets=true"
+  }
 }
