--- a/RozarPagesMovie/appsettings.json
+++ b/RozarPagesMovie/appsettings.json
@@ -8,6 +8,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "RozarPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RozarPagesMovieContext-5e9c8306-5fab-4640-972e-fcf808914275;Trusted_Connection=True;MultipleActiveResultSets=true"
+    "RozarPagesMovieContext": "Server=(localdb)\\mssqllocaldb;Database=RozarPagesMovieContext-5e9c8306-5fab-4640-972e-fcf808914275;Trusted_Connection=True;MultipleActiveResultSets=true;user id=sa;password="
   }
 }
